[package]
name = "settings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
# mctk_core = { git = "https://github.com/mecha-org/mctk.git", rev = "cbd85c0f9cdb4279a89389ed1ec5bba9a8d5a30a" }
# mctk_macros = { git = "https://github.com/mecha-org/mctk.git", rev = "cbd85c0f9cdb4279a89389ed1ec5bba9a8d5a30a" }
mctk_core = { git = "https://github.com/akshayr-mecha/mctk.git", rev = "48bd665e6e777407df123f7d46d3e4292c5f7c7b" }
mctk_smithay = { git = "https://github.com/akshayr-mecha/mctk.git", rev = "48bd665e6e777407df123f7d46d3e4292c5f7c7b" }
mctk_macros = { git = "https://github.com/akshayr-mecha/mctk.git", rev = "48bd665e6e777407df123f7d46d3e4292c5f7c7b" }
xdg = "2.4.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
const_format = "0.2.32"
dirs = "5.0.1"
tokio = { version = "1.33", features = ["full"] }
zbus = { version = "4.1.2", features = ["tokio"] }
mechanix_system_dbus_client = { path = "../../services/system/client/dbus" }