[package]
name = "mechanix-settings-app"
version = "0.1.0"
edition = "2021"
authors = ["Divya Khanani <divyak@mechasystems.com>", "Akshay Raina <akshayr@mechasystems.com>", "Sweta Rohit <swetar@mechasystems.com>"]
documentation = "https://docs.mecha.so"
description = "mecha developer cli"
repository = "https://github.com/dhruveshb-mecha/developer-cli"
homepage = "https://mecha.so"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
console = "0.15.8"
dialoguer = "0.11.0"
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.32"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "tracing"] }
