[package]
name = "mechanix-settings-app"
description = "Settings app"
version = "0.1.0"
authors = [
    "Divya Khanani <divyak@mechasystems.com>",
    "Akshay Raina <akshayr@mechasystems.com>",
    "Sweta Rohit <swetar@mechasystems.com>"
]
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mechanix-gui"
homepage = "https://mecha.so"
categories = ["gui"]
keywords = ["linux", "shell", "mobile", "gui", "ui", "graphics", "interface", "widgets"]

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive",] }
serde_yaml = "0.9.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
relm4 = "0.7.0-beta.1"
relm4-components = "0.7.0-beta.1"
relm4-macros = "0.7.0-beta.1"
tonic = "0.9.2"
# gtk4-layer-shell = { version = "0.1.5", optional = true }
greetd_ipc = {version = "0.9.0",  features = ["sync-codec"]}
custom_widgets = { path = "../commons/custom_widgets"}
custom_utils = { path = "../commons/custom_utils"}
tokio = { version = "1.36.0", features = ["full"] }
zbus = { version = "4.1.2", features = ["tokio"] }
mechanix_system_dbus_client = { path = "../../services/system/client/dbus" }

[build-dependencies]
tonic-build = "0.9.2"

# [features]
# default = ["layer-shell"]
# layer-shell = ["gtk4-layer-shell"]