[package]
name = "echo_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "3.14.1"
anyhow = "1.0.71"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zvariant = "3.15.0"
serde = { version = "1.0.163", features = ["derive"] }