[package]
name = "policykit"
documentation = "https://docs.mecha.so"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mechanix-gui"
homepage = "https://mecha.so"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { version = "4.1.2", features = ["tokio"] }
serde = { version = "1.0.163", features = ["derive"] }
anyhow = "1"
