[package]
name = "services"
documentation = "https://docs.mecha.so"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mecha-launcher"
homepage = "https://mecha.so"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
