[package]
name = "wlroots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = {version = "1.34.0", features = ["full"] }
wayrs-client = { version = "0.12", features = ["tokio"] }
wayrs-protocols = { version = "0.12", features = ["wlr-foreign-toplevel-management-unstable-v1"] }
zbus = "3.14.1"
