[package]
name = "mechanix-config-cli"
description = "CLI interface for mconfig, to get and set configuration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
